# pytorch_tutorial

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  skill.md  tutorial_explain_skill.md
.claude/: CLAUDE.md  settings.json
pytorch-learning/: pyproject.toml
pytorch-learning/.claude/skills/math-explanation/: SKILL.md
pytorch-learning/src/basic/01_tensor/: math_explanation.md  math_explanation_marimo.py  matrix_products.py  tensors.py
pytorch-learning/src/basic/02_dataset/: create_custom_dataset.py  dataset.py  explanation.md
pytorch-learning/src/basic/03_transforms/: plot_transforms_getting_started.ipynb  transforms.py
pytorch-learning/src/basic/04_build_neural_network/: build_nn_flow.py  build_nn_network.py
pytorch-learning/src/basic/05_automatic_differentiation/: back_propagation.py  back_propagation_marimo.py
pytorch-learning/src/basic/06_optimizing_model_parameters/: optimization_tutorial_marimo.py
pytorch-learning/src/basic/07_save_load_model/: save_load_model_marimo.py
pytorch-learning/src/basic/08_from_scratch/: fashionmnist_scratch_marimo.py  linear_regression_from_scratch_marimo.py
pytorch-learning/src/basic/09_cnn_cifar10/: cnn_cifar10_marimo.py  transfer_learning_marimo.py
pytorch-learning/src/basic/10_training_techniques/: overfitting_regularization_marimo.py
pytorch-learning/src/basic/11_transformer/: attention_basics_marimo.py  mini_gpt_marimo.py
pytorch-learning/src/basic/dataset/: dataset.py  explanation.md
pytorch-learning/src/basic/tensor/: math_explanation.md
pytorch-learning/src/test/: check.py
(+3 files in other folders)
