[project]
name = "pytorch-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "jupyterlab>=4.5.7",
    "marimo>=0.23.8",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
]
